# stt

./: README.md  g1_example.py  key_trigger.py  pyproject.toml  verify_g1_source.py
scripts/: get_ld_lib_path
src/stt/: __init__.py  audio_source.py  cli.py  http_node.py  recoder.py  transcriber.py  utils.py  viz.py
